# book_Picto_flask

./: .dockerignore  .gitignore  Dockerfile  MIGRATION_TO_FLASK.md  README.md  create_test_data.py  docker-compose.yml  migrate_card_table.py  pyproject.toml
app/: __init__.py  config.py  db.py
app/models/: asset.py  book.py  card.py  page.py
app/routes/: assets.py  books.py  cards.py  main.py  pages.py
app/schemas/: __init__.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: index.html
app/templates/assets/: detail.html  edit.html  list.html  upload.html
app/templates/books/: detail.html  list.html  new.html  runtime.html  runtime_simple.html
app/templates/cards/: detail.html  edit.html  list.html  new.html
app/templates/pages/: detail.html  edit.html  list.html  new.html
flask_app/: Dockerfile  data.db  pyproject.toml  run.py  test_app.py
flask_app/app/: __init__.py  db.py
flask_app/app/models/: __init__.py  asset.py  book.py  card.py  page.py
flask_app/app/routes/: assets.py  books.py  cards.py  main.py  pages.py
flask_app/app/schemas/: __init__.py
flask_app/app/static/css/: main.css
flask_app/app/templates/: base.html
flask_app/app/templates/assets/: detail.html  edit.html  list.html
flask_app/app/templates/books/: detail.html  edit.html  list.html
flask_app/app/templates/cards/: detail.html  edit.html  list.html  new.html
flask_app/app/templates/components/: book_card.html
flask_app/app/templates/pages/: detail.html  edit.html  list.html
